--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body{
     margin: 0%;
     font-family: 'Poppins', sans-serif;
     background-color: whitesmoke;
-    /* overflow: auto; */
 }
 div.nav-bar{
     list-style-type: none;
@@ -14,7 +13,7 @@ div.nav-bar{
     position: fixed;
     display: flex;
     flex-wrap: wrap;
-    /* align-items: center; */
+    padding: 0%;
     justify-content: space-between;
 }
 li.nav-bar{
@@ -29,20 +28,19 @@ li.nav-bar{
 }
 .nav-bar p{
     color: aliceblue;
-    font-size: 32px;
-    padding-left: 30px;
+    font-size: 25px;
+    padding: 0px 0px 0px 30px;
     margin-left: 0px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 li a{
     color: aliceblue;
     text-decoration: none;
-    font-size: 21px;
+    font-size: 18px;
     transition: .3s ease;
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
-    /* overflow: auto; */
+    padding: 6px 10px;
     position: relative;
 }
 li a.nav-bar:hover{
@@ -71,7 +69,7 @@ div.links.nav-bar{
 div.footer{
     height: 50px;
     width: 100%;
-    font-size: 19px;
+    font-size: 17px;
     color: aliceblue;
     display: flex;
     align-items: center;
@@ -96,7 +94,7 @@ h3{
 div.home-content{
     background-color: white;
     height: auto;
-    width: 70%;
+    width: 73%;
     padding: 40px 10px;
     box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.1);
     display: flex; 
@@ -107,7 +105,7 @@ div.home-content{
 }
 a.home-content{
     text-align: center;
-    font-size: large;
+    font-size: small;
     margin: 10px;
 }
 div.home-text{
@@ -117,14 +115,13 @@ div.home-text{
     align-items: center;
 }
 p.home-text{
-    font-size: 22px;
+    font-size: 19px;
     justify-content: space-between;
     line-height: 1.6;
     padding-left: 7px;
 }
 img.home-image{
     height: 200px;
-    /* height: auto; */
     width: auto;
     border-radius: 25%;
     display: flex;
@@ -145,7 +142,7 @@ img.home-image{
     background-color: white;
     padding: 20px 30px;
     box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center; 
@@ -158,19 +155,18 @@ img.home-image{
 }
 p.about2{
     color: #555;
-    font-size: 20px;
+    font-size: 18px;
     list-style-type: disc;
 }
 ol{
     list-style-type:circle;
 }
 div.qulification{
-    /* height: 800; */
-    width: 80%;
+    width: 70%;
     background-color: white;
     box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.1);
     margin: auto;
-    padding: 39px;
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -202,11 +198,12 @@ div.qulification{
 /* contact */
 .contact-container{
     height: auto;
-    width: 93%;
+    width: 70%;
     padding: 20px 0px;
     background-color: white;
     box-shadow: 5px 5px 10px rgb(219, 218, 218);
     display: flex;
+    padding: 20px;
     overflow: auto;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -219,13 +216,12 @@ div.qulification{
     width: auto;
     flex-wrap: wrap;
     color: #555;
-    font-size: 21px;
+    font-size: 18px;
     margin-left: 50px;
 }
 .contact2{
     height: auto;
     line-height: 1.8;
-    /* width: 100%; */
     color: #555;
     justify-content: space-between;
     display: flex;
@@ -272,7 +268,7 @@ color: aliceblue;
 /* projects */
 div.project-container{
     height: auto;
-    width: 80%;
+    width: 70%;
     justify-content: center;
     display: flex;
     margin: auto;
@@ -293,7 +289,6 @@ div.project{
     box-sizing: border-box;
     height: 250px;
     width: 350px;
-    /* overflow: auto; */
     border-radius: 8px; 
     transition: all 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
